--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Word Counter">
@@ -38,7 +37,7 @@
             <iframe id="map_result" src="https://maps.google.com/maps?q=india&output=embed"></iframe>
         </div>
     </section>
-    <footer class="main-div_footer">made with ❤️ ~ <b>Sandeep Sala</b></footer>
+    <footer class="main-div_footer">Made With ❤️ ~ <b>Sandeep Sala</b></footer>
     <script src="src/js/constant.js"></script>
     <script src="src/js/app.js"></script>
 </body>
